--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- Event Header -->
         <header class="text-center mb-10">
-            <img src="uploaded:Logo.jpg-73c858c7-8c19-467f-93d3-b7ec3cc28225" alt="Logo do Evento Intensive Training in PET/CT" class="mx-auto mb-5 w-36 h-36 object-contain">
+            <img src="Logo.jpg" alt="Logo do Evento Intensive Training in PET/CT" class="mx-auto mb-5 w-36 h-36 object-contain">
             <h1 class="text-2xl md:text-4xl font-bold text-gray-900">
                 Intensive Training in PET/CT for Cardiology and Oncology
             </h1>
