--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="md:col-span-2">
                             <label for="nome_cracha" class="block text-sm font-medium text-gray-700 mb-1">Nome para Crachá (até 2 nomes)</label>
-                            <input type="text" id="nome_cracha" name="Nome para Crachá" placeholder="Ex: Pedro Pontes" required class="block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus-style focus:border-blue-500 sm:text-sm">
+                            <input type="text" id="nome_cracha" name="Nome para Crachá" placeholder="Ex: Hermenegildo Silva" required class="block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus-style focus:border-blue-500 sm:text-sm">
                             <p id="cracha-error" class="text-red-500 text-xs mt-1 hidden">Por favor, insira no máximo dois nomes.</p>
                         </div>
                         <div>
@@ -311,4 +311,5 @@
 
 </body>
 </html>
+
 
